# blog

./: .gitignore  Dockerrun.aws.json  README.md  Taskfile.yaml  docker-compose-backup.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: blog_linting.yaml  deploy.yml  lint.yml
api/: Dockerfile  Taskfile.yaml  pyproject.toml
api/myblog/: manage.py
api/myblog/backend/: apps.py  models.py  serializers.py  views.py
api/myblog/backend/migrations/: 0001_initial.py
api/myblog/myblog/: settings.py
frontend/: .dockerignore  .eslintrc.json  .prettierrc  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  package-lock.json  package.json
frontend/nginx/: default.conf
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Blog.js  BlogDetail.js  Category.js  Home.js  Navbar.js
frontend/src/layout/: Layout.js
myblog/: Dockerfile  Dockerfile.prod
myblog/backend/: admin.py  models.py  serializers.py  urls.py  views.py
myblog/myblog/: settings.py  urls.py
nginx/: Dockerfile  Dockerfile.prod  nginx.conf
nginx/configs/: default.conf
