[tool.poetry]
name = "blog"
version = "0.1.0"
description = "a django blog"
authors = ["Adnene_wsl <adnen.guessoum@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
