[tool.poetry]
name = "blog"
version = "0.1.0"
description = "a django blog"
authors = ["Adnene_wsl <adnen.guessoum@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
django-summernote = "^0.8.20.0"
pillow = "^9.3.0"
django-cors-headers = "^3.13.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.0"
flake8 = "^5.0.4"
pylint = "^2.15.5"
pipreqs = "^0.4.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
